# bottle-quality-inspection

./: .gitignore  README.md  pyproject.toml
docs/: architecture.md  legacy-2022-audit.md
legacy/2022/: README.md
legacy/2022/media/: README.md
legacy/2022/scripts/: Glass preprocess.py  VIDEO_WITH_TEMPLATE_.py  VIDEO_WITH_TEMPLATE_AND_ROI.py  templatematch_cork.py
legacy/2025/: README.md
src/bottle_quality_inspection/: __init__.py  __main__.py  calibration.py  exceptions.py  pipeline.py  processors.py  roi.py  video_io.py
tests/: test_calibration.py  test_package.py  test_pipeline.py  test_processors.py  test_roi.py  test_video_frames.py  test_video_io.py  test_video_writer.py
