[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "bottle-quality-inspection"
version = "0.1.0"
description = "Production-oriented computer vision system for automated bottle quality inspection."
readme = "README.md"
requires-python = ">=3.12,<3.13"
authors = [
    { name = "Thanasis Antonopoulos" }
]
dependencies = [
    "numpy>=2.0,<3",
    "opencv-python>=4.10,<5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra"

[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = ["legacy"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
    "B"
]